# apex-steering

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.base.json
crates/edge-steering/: Cargo.toml
crates/edge-steering/scripts/: server.mjs
crates/edge-steering/src/: control.rs  lib.rs  policy.rs  response.rs  state.rs  types.rs
crates/edge-steering/tests/: integration.rs
crates/manifest-updater/: Cargo.toml
crates/manifest-updater/src/: encode.rs  lib.rs  types.rs
crates/manifest-updater/src/dash/: mod.rs
crates/manifest-updater/src/hls/: mod.rs
crates/manifest-updater/tests/: integration.rs
docs/: ROADMAP.md
e2e/: package.json  vitest.config.ts
e2e/fixtures/: providers.json  sample-dash.mpd  sample-hls.m3u8
e2e/src/helpers/: api.ts  fixtures.ts  global-setup.ts  manifest-bridge.ts
e2e/src/sandbox/: manifest-bridge.ts  server.ts
e2e/src/tests/: concurrent.test.ts  contracts.test.ts  dash-session.test.ts  disaster.test.ts  errors.test.ts  hls-session.test.ts  multi-region.test.ts  overrides.test.ts  tokens.test.ts  wire-compat.test.ts
scripts/: bootstrap.sh  build-wasm.sh  ci.sh  dev.sh
test/: README.md
ui/: app.js  index.html  styles.css
ui/modules/: api.js  cdn-config.js  cdn-indicator.js  controls.js  events.js  player.js  sections.js  status.js
wrappers/edge-steering/akamai/: bundle.json  main.js
wrappers/edge-steering/cloudflare/: worker.js
wrappers/edge-steering/cloudfront/: index.js
wrappers/edge-steering/fastly/: index.js
wrappers/manifest-updater/akamai/: main.js
(+3 files in other folders)
