[package]
name = "apex-edge-steering"
version = "0.1.0"
edition = "2021"
description = "Stateless edge content steering server implementing HLS and DASH Content Steering"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
base64.workspace = true
url = "2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
